--- a/package.json
+++ b/package.json
@@ -14,11 +14,8 @@
     "clsx": "^2.1.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-font": "^1.2.1",
     "react-icons": "^5.3.0",
-    "react-qr-code": "^2.0.15",
-    "react-router-dom": "^6.28.0",
-    "recharts": "^2.13.3"
+    "react-router-dom": "^6.28.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
